k8s/gloo/istio-1-10-2/gateway.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: istio-multi-rev-demo
spec:
  virtualHost:
    domains:
      - '*'
    routes:
      - matchers:
          - prefix: /
        routeAction:
          # ----------------------- Destination ----------------------
          # Distribute traffic between 1-8-6 and 1-10-2
          # ----------------------------------------------------------------
          multi:
            destinations:
              - weight: 70
                destination:
                  upstream:
                    name: demo-1-8-6-hello-world-8080
                    namespace: my-gloo
              - weight: 30
                destination:
                  upstream:
                    name: demo-1-10-2-hello-world-8080
                    namespace: my-gloo
